reactive: back: Open API correction
